# fastapi-workshop

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
fastapi_workshop/: database.py  main.py
fastapi_workshop/models/: customer.py
fastapi_workshop/repository/: customer.py  order.py
fastapi_workshop/routers/: customer.py  hello.py
fastapi_workshop/routers/schemas/: customer.py
