[tool.poetry]
name = "fastapi-workshop"
version = "0.1.0"
description = "Workshop Python: simple Rest API using FastAPI and SQLAlchemy"
authors = ["Jérôme Beigbeder <jerome.beigbeder@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
yapf = "^0.31.0"
toml = "^0.10.2"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
]